Attempt fix code blocks first line number misalignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -524,3 +524,5 @@ pre { background: var(--base00); color: var(--base07) }
 .highlight .vg { color: var(--base08) } /* Name.Variable.Global */
 .highlight .vi { color: var(--base08) } /* Name.Variable.Instance */
 .highlight .il { color: var(--base09) } /* Literal.Number.Integer.Long */
+
+.highlight pre code:first-child {padding: 0 0.4 0 1.2em;}
